--- a/storage/contractors/templates/contractors/add_contractor.html
+++ b/storage/contractors/templates/contractors/add_contractor.html
@@ -1,18 +1,12 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-error">{{ form.non_field_errors }}</div>
 
-        {% for field in form %}
-        <p><label class="form-label" for="{{ field.id_for_label }}">{{ field.label }}</label>{{ field }}</p>
-        <div class="form-error">{{ field.errors }}</div>
-        {% endfor %}
-
-        <p><button type="submit">Создать</button></p>
-        
+        {% crispy form %}
     </form>
 
 {% endblock %}
