--- a/storage/products/templates/products/product.html
+++ b/storage/products/templates/products/product.html
@@ -1,8 +1,21 @@
 {% extends 'base.html' %}
-
-
 {% block content %}
-<a href="{% url 'products:update_product' product.pk %}"><button>Редактировать</button></a>
-<p>{{ product }}</p>
+
+<h5>{{ product }}</h5>
+
+<ul class="list-group list-group-flush">
+    <li class="list-group-item">Идентификатор: {{ product.pk }}</li>
+    <li class="list-group-item">Название: {{ product.fish }}</li>
+    <li class="list-group-item">Разделка: {{ product.cutting }}</li>
+    <li class="list-group-item">Размер: {{ product.size }}</li>
+    <li class="list-group-item">Производитель: {{ product.producer }}</li>
+    <li class="list-group-item">Упаковка: {{ product.package }}</li>
+    <li class="list-group-item">Заметки: {{ product.note }}</li>
+    <li class="list-group-item">Дата создания: {{ product.date_create }}</li>
+    <li class="list-group-item">Дата изменения: {{ product.date_update }}</li>
+</ul>
+
+<a href="{% url 'products:update_product' product.pk %}">
+    <button class="btn btn-success mt-4">Редактировать</button></a>
 
 {% endblock %}
