--- a/storage/storage_items/templates/storage_items/storage_items.html
+++ b/storage/storage_items/templates/storage_items/storage_items.html
@@ -23,7 +23,7 @@
         class="table-danger"
         {% endif %}
         >
-            <td>{{ s_i.product }}</td>
+            <td><a href="{% url 'products:product' s_i.product.pk %}" class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover">{{ s_i.product }}</a></td>
             <td>{{ s_i.weight }} кг</td>
             <td>{{ s_i.price }} руб</td>
             <td
